# PythonProject-Dec-2025

./: .env  dummy_test.py  pyproject.toml  questions to discuss  run.py
app/: main.py  reame.md
app/agent/: agent.py  env
app/agent/manager/: .env  agent.py  utils.py
app/agent/manager/sub_agent/data_analysis_agent/: agent.py
app/agent/manager/sub_agent/knowledge_base_agent/: agent.py
app/agent/manager/sub_agent/release_agent/: agent.py  callback.py  relese_api.py
app/agent/manager/sub_agent/reporting_agent/: agent.py
app/agent/sub_agent/reporting_agent/: agent.py  tool.py
app/api/: chat.py  learning_sse.py  prompt.py  session.py
app/db/: prompt_repository.py
app/db/models/: prompt.py
app/models/: chat_history.py  chat_request.py  init_session.py  prompt_request.py
app/service/: agent_runner_service.py  chat_service.py  prompt_service.py  session_service.py
app/service/adk/: runner_service.py  session_service.py
